--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /FooDrink/FooDrink.Infrastructure/bin/Debug/net6.0
 /FooDrink/FooDrink.Infrastructure/obj
 /FooDrink/FooDrink.Presentation/obj
+/FooDrink/FooDrink.Repository/bin/Debug/net6.0
+/FooDrink/FooDrink.Repository/obj
