Update - Fix Connection string Secret Leak config DI User example

--- a/FooDrink/FooDrink.DTO/FooDrink.DTO.csproj
+++ b/FooDrink/FooDrink.DTO/FooDrink.DTO.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FooDrink.Database\FooDrink.Database.csproj" />
+  </ItemGroup>
+
 </Project>
