--- a/FooDrink/FooDrink.Infrastructure/FooDrink.Infrastructure.csproj
+++ b/FooDrink/FooDrink.Infrastructure/FooDrink.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FooDrink.Database\FooDrink.Database.csproj" />
     <ProjectReference Include="..\FooDrink.Repository\FooDrink.Repository.csproj" />
   </ItemGroup>
 
