--- a/FooDrink/FooDrink.API/appsettings.json
+++ b/FooDrink/FooDrink.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=125.212.218.93\\\\MSSQLSERVER2017; Initial Catalog=FooDrink;User ID=dangthanhquy_FooDrink;Password=Thanhquy12345@; TrustServerCertificate=False"
+  },
   "AllowedHosts": "*"
 }
