--- a/FooDrink/FooDrink.Infrastructure/FooDrink.Infrastructure.csproj
+++ b/FooDrink/FooDrink.Infrastructure/FooDrink.Infrastructure.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FooDrink.BussinessService\FooDrink.BussinessService.csproj" />
     <ProjectReference Include="..\FooDrink.Database\FooDrink.Database.csproj" />
     <ProjectReference Include="..\FooDrink.Repository\FooDrink.Repository.csproj" />
   </ItemGroup>
